apps/routers/test-howard-webhook/webhook-test-howard-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: webhook-test-howard-public-http
  namespace: traefik-staging
spec:
  ports:
    - name: webhook-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: webhook-test-howard-public-http
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.12.202
  ports:
  - port: 80
    name: webhook-http
---
kind: Service
apiVersion: v1
metadata:
  name: webhook-test-howard-public-https
  namespace: traefik-staging
spec:
  ports:
    - name: webhook-https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: webhook-test-howard-public-https
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.13.242
  ports:
  - port: 443
    name: webhook-https
